Refactor: rename role handler funcs
